# zita

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: audit.toml
migrations/: 01-applications-table.sql  02-scopes-table.sql  03-roles-table.sql  04-users-table.sql  05-clients-table.sql
src/: config.rs  error.rs  main.rs
src/identity/: mod.rs  scope.rs
src/v1/auth/: get.rs  mod.rs  post.rs
zita/: Cargo.toml  config.yaml  ec.example.pem  rsa.example.pem
zita-ui/: .gitignore  Cargo.toml  index.html
zita-ui/src/: main.rs  theme.rs
zita-ui/src/components/: button.rs  input.rs  island.rs  mod.rs  spinner.rs  theme_provider.rs  theme_toggle.rs  toggle.rs
zita-ui/src/components/notification/: container.rs  imp.rs  mod.rs  provider.rs  state.rs
zita-ui/src/theme/: mod.rs  provider.rs
zita-ui/src/views/: authorize.rs  components_museum.rs  mod.rs  not_found.rs
zita-ui/static/: main.css
zita/src/: config.rs  error.rs  main.rs  probes.rs
zita/src/v1/: mod.rs
zita/src/well_known/: jwks.rs  mod.rs  openid_configuration.rs
