[package]
name = "zita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = [ "macros", "rt-multi-thread"] }
futures = "0.3.26"

paperclip = { version = "0.8.0", features = ["actix4", "swagger-ui"] }
actix-web = "4.3.0"
deadpool-postgres = "0.10.5"
tokio-postgres = { version = "*", features = ["with-uuid-1"]}

jsonwebtoken = "8.2.0"
argon2 = { version = "0.5.0", features = ["std"] }

color-eyre = "0.6.2"
thiserror = "1.0.38"
envconfig = "0.10.0"
strum = { version = "0.24.1", features = ["derive"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
uuid = "1.3.1"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
