[package]
name = "zita-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.61", features = [] }

yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yew_icons = { version = "0.7.1", features = ["lucide"] }

stylist = { version = "0.12.0", features = ["yew_integration"] }

nanoid = "0.4.0"
getrandom = { version = "0.2.9", features = ["js"] }
