[package]
name = "zita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "fs"] }
futures = "0.3.26"

paperclip = { version = "0.8.0", features = ["actix4", "swagger-ui"] }
actix-web = "4.3.0"

deadpool-postgres = "0.10.5"
tokio-postgres = { version = "*", features = ["with-uuid-1"] }

argon2 = { version = "0.5.0", features = ["std"] }
aliri = { version = "0.6.2", default-features = false, features = ["private-keys", "rsa", "ec"] }
sha1 = "0.10.5"

color-eyre = "0.6.2"
thiserror = "1.0.38"
envconfig = "0.10.0"
strum = { version = "0.24.1", features = ["derive"] }
uuid = "1.3.1"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93", features = ["preserve_order"] }
serde_yaml = "0.9.21"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
